--- a/main.css
+++ b/main.css
@@ -22,8 +22,11 @@
     padding: 100px;
     text-align: center;
     font-family: sans-serif;
-    font-size: 48px;
+    font-size: 50px;
     font-weight: 700;
     background-color: lightslategray;
     color: #fff;
+}
+.footer ul{
+    display: flex;
 }
